--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -6,3 +6,22 @@
 body {
     background-color: skyblue;
 }
+
+#info {
+  position: absolute;
+  top: 10px;
+  width: 100%;
+  text-align: center;
+  z-index: 100;
+  display:block;
+}
+
+.label {
+    color: #FFF;
+    font-family: 'Helvetica Neue', sans-serif;
+    font-weight: bold;
+    padding: 5px 10px;
+    background: rgba(0, 0, 0, 0.6); /* 半透明背景增加可读性 */
+    border-radius: 4px;
+    backdrop-filter: blur(4px); /* 磨砂玻璃效果，WebGL里很难做，这里一行代码搞定 */
+}
